apps/buzz/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buzz
  labels:
    app.kubernetes.io/part-of: homelab
